--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>local stage test</title>
 </head>
 <body>
+	if(!typeof sessionStrage == 'undifined'){
+	window.alert("使えません");
+}
 	<div></div>
 </body>
 </html>
