--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 	window.alert("使えません");
 }
 </script>
+
+key:<input type="text" name="key" id="key" size="10"> value:
+<input type="text" name="value" id="value" size="10">
+<input type="button" value="save" onClick="save()">
+
 	<div id="list"></div>
 	<script type="text/javascript">
 var storage = sessionStorage;
-storage.setItem('foo','bar');
-for (var i = 0; i < sessionStorage.length; i++) {
-	var _key = storage.key(i);
-	document.getElementById("list").innerHTML += _key +
-	":" + storage.getItem(_key) + "<br>";
-}
+
+
 	</script>
 </body>
 </html>
