--- a/index.html
+++ b/index.html
@@ -18,9 +18,25 @@ key:<input type="text" name="key" id="key" size="10"> value:
 
 	<div id="list"></div>
 	<script type="text/javascript">
-var storage = sessionStorage;
+var storage = window.sessionStorage;
+function save(){
+	var keyVal = document.getElementById("key").value;
+	var valueVal = document.getElementById("value").value;
+	if (keyVal && valueVal) {
+		storage.setItem(keyVal,valueVal);
+	}
+	keyVal = "";
+	valueVal = "";
+	list();
+}
 
-
-	</script>
-</body>
+function list() {
+	var list ="";
+	for (var i = storage.length ; i++) {
+		var _key = storage.key(i);
+		list += _key + ":" + storage.getItem(_key) + "<br>" 
+	}
+	document.getElementById("list").innerHTML = list;
+}
+	</body>
 </html>
