--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 }
 </script>
 
-key:<input type="text" name="key" id="key" size="10"> value:
-<input type="text" name="value" id="value" size="10">
+key:<input type="text" name="key" id="key" size="10"> 
+value:<input type="text" name="value" id="value" size="10">
+
 <input type="button" value="save" onClick="save()">
 <input type="button" value="clear" onClick="reset()">
 	<div id="length"></div>
@@ -25,7 +26,8 @@ function save(){
 	var keyVal = document.getElementById("key").value;
 	var valueVal = document.getElementById("value").value;
 	if (keyVal && valueVal) {
-		storage.setItem(keyVal,valueVal);
+		//storage.setItem(keyVal,valueVal);
+		storage.setItem(keyVal,JSON.stringify(valueVal));
 	}
 	keyVal = "";
 	valueVal = "";
@@ -38,11 +40,11 @@ function list() {
 	
 	for (var i =0; i<storage.length ; i++) {
 		var _key = storage.key(i);
-		list += _key + ":" + storage.getItem(_key) + "    <a href=\"#\"onClick=\"removeSt(" + i + ")\">削除</a><br>"; 
+		list += _key + ":" + JSON.parse(storage.getItem(_key))+ "    <a href=\"#\"onClick=\"removeSt(" + i + ")\">削除</a><br>"; 
 	}
 	$('#length').html(length);
-	//ocument.getElementById("list").innerHTML = list;
-	&(''#list).html(kist);
+	//document.getElementById("list").innerHTML = list;
+	$('#list').html(list);
 }
 
 function removeSt(n) {
